--- a/files/en-us/web/guide/audio_and_video_delivery/video_player_styling_basics/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/video_player_styling_basics/index.html
@@ -8,13 +8,11 @@ tags:
   - Styling
   - Video
 ---
-<div class="summary">
-<p><span class="seoSummary">In the previous <a href="/en-US/docs/Web/Guide/Audio_and_video_delivery/cross_browser_video_player">Cross browser video player article</a> we described how to build a cross-browser HTML5 video player using the Media and Fullscreen APIs. This follow-up article looks at how to style this custom player, including making it responsive.</span></p>
-</div>
+<p>In the previous <a href="/en-US/docs/Web/Guide/Audio_and_video_delivery/cross_browser_video_player">Cross browser video player article</a> we described how to build a cross-browser HTML5 video player using the Media and Fullscreen APIs. This follow-up article looks at how to style this custom player, including making it responsive.</p>
 
 <h2 id="The_example_in_action">The example in action</h2>
 
-<p><img alt="A video player with play, stop, volume and fullscreen controls, showing an image of a soldier." src="video-player-styled.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="A video player with play, stop, volume and fullscreen controls, showing an image of a soldier." src="video-player-styled.png"></p>
 
 <p>You can find the code for the <a href="https://github.com/iandevlin/iandevlin.github.io/tree/master/mdn/video-player-styled">updated, styled example</a> on Github, and <a href="https://iandevlin.github.io/mdn/video-player-styled/">view it live</a>.</p>
 
@@ -57,7 +55,7 @@ tags:
 <p>The resultant video player style used here is rather basic — this is intentional, as the purpose is to show how such a video player could be styled and be made responsive.</p>
 
 <div class="note">
-<p><strong>Note</strong>: in some cases some basic CSS is omitted from the code examples here as its use is either obvious or not specifically relevant to styling the video player.</p>
+<p><strong>Note:</strong> in some cases some basic CSS is omitted from the code examples here as its use is either obvious or not specifically relevant to styling the video player.</p>
 </div>
 
 <h3 id="Basic_styling">Basic styling</h3>
