--- a/files/en-us/web/guide/ajax/community/index.html
+++ b/files/en-us/web/guide/ajax/community/index.html
@@ -12,9 +12,9 @@ tags:
 
 <ul>
  <li><a href="http://skillsmatter.com/go/ajax-ria">skillsmatter.com</a>: Courses and events on JavaScript, Ajax, and Reverse Ajax technologies</li>
- <li><a href="https://www.telerik.com/forums/aspnet-ajax" rel="noopener">telerik.com</a>: An active community forum for Ajax</li>
- <li><a href="https://community.tableau.com/search.jspa?q=ajax" rel="noopener">community.tableau.com</a>: Community support forum and courses available for Ajax</li>
- <li><a href="https://www.codementor.io/community/search?q=ajax" rel="noopener">codementor.io</a>: Social platform with Ajax forums and tutorials</li>
- <li><a href="https://www.lynda.com/search?q=ajax" rel="noopener">lynda.com</a>: Tutorials available for learning the fundamentals of Ajax</li>
- <li><a href="https://www.onlineinterviewquestions.com/ajax-interview-questions/" rel="bookmark">Ajax Interview Questions and answer</a><a href="https://www.onlineinterviewquestions.com/ajax-interview-questions/"> and answer</a><span class="comment">Interwiki links</span></li>
+ <li><a href="https://www.telerik.com/forums/aspnet-ajax">telerik.com</a>: An active community forum for Ajax</li>
+ <li><a href="https://community.tableau.com/search.jspa?q=ajax">community.tableau.com</a>: Community support forum and courses available for Ajax</li>
+ <li><a href="https://www.codementor.io/community/search?q=ajax">codementor.io</a>: Social platform with Ajax forums and tutorials</li>
+ <li><a href="https://www.lynda.com/search?q=ajax">lynda.com</a>: Tutorials available for learning the fundamentals of Ajax</li>
+ <li><a href="https://www.onlineinterviewquestions.com/ajax-interview-questions/" rel="bookmark">Ajax Interview Questions and answer</a><a href="https://www.onlineinterviewquestions.com/ajax-interview-questions/"> and answer</a>Interwiki links</li>
 </ul>
