--- a/files/en-us/web/guide/audio_and_video_delivery/buffering_seeking_time_ranges/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/buffering_seeking_time_ranges/index.html
@@ -10,9 +10,7 @@ tags:
   - buffering
   - seeking
 ---
-<div class="summary">
-<p><span class="seoSummary">Sometimes it's useful to know how much {{htmlelement("audio") }} or {{htmlelement("video") }} has downloaded or is playable without delay — a good example of this is the buffered progress bar of an audio or video player. This article discusses how to build a buffer/seek bar using <a href="/en-US/docs/Web/API/TimeRanges">TimeRanges</a>, and other features of the media API.</span></p>
-</div>
+<p>Sometimes it's useful to know how much {{htmlelement("audio") }} or {{htmlelement("video") }} has downloaded or is playable without delay — a good example of this is the buffered progress bar of an audio or video player. This article discusses how to build a buffer/seek bar using <a href="/en-US/docs/Web/API/TimeRanges">TimeRanges</a>, and other features of the media API.</p>
 
 <h2 id="Buffered">Buffered</h2>
 
@@ -101,10 +99,10 @@ myAudio.buffered.end(1);   // returns 19</pre>
 
 <p>This works better with longer pieces of audio or video, but press play and click about the player progress bar and you should get something like this. Each red filled white rectangle represents a time range.</p>
 
-<p><img alt="A simple audio player with play button, seek bar and volume control, with a series of red rectangles beneath it representing time ranges." src="bufferedtimeranges.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="A simple audio player with play button, seek bar and volume control, with a series of red rectangles beneath it representing time ranges." src="bufferedtimeranges.png"></p>
 
 <div class="note">
-<p><strong>Note</strong>: You can see the <a href="https://jsbin.com/memazaro/1/edit">timerange code running live on JS Bin</a>.</p>
+<p><strong>Note:</strong> You can see the <a href="https://jsbin.com/memazaro/1/edit">timerange code running live on JS Bin</a>.</p>
 </div>
 
 <h2 id="Seekable">Seekable</h2>
@@ -120,7 +118,7 @@ myAudio.buffered.end(1);   // returns 19</pre>
 <pre class="brush: js">var seekableEnd = myAudio.seekable.end(myAudio.seekable.length - 1);</pre>
 
 <div class="note">
-<p><strong>Note</strong>: <code>myAudio.seekable.end(myAudio.seekable.length - 1)</code> actually tells us the end point of the last time range that is seekable (not all seekable media). In practice this is good enough as the browser either enables range requests or it doesn't. If it doesn't then <code>audio.seekable</code> will be equivalent to <code>audio.buffered</code>, which will give a valid indication of the end of seekable media. If range requests are enabled this value usually becomes the duration of the media almost instantly.</p>
+<p><strong>Note:</strong> <code>myAudio.seekable.end(myAudio.seekable.length - 1)</code> actually tells us the end point of the last time range that is seekable (not all seekable media). In practice this is good enough as the browser either enables range requests or it doesn't. If it doesn't then <code>audio.seekable</code> will be equivalent to <code>audio.buffered</code>, which will give a valid indication of the end of seekable media. If range requests are enabled this value usually becomes the duration of the media almost instantly.</p>
 </div>
 
 <p>It is better perhaps to give an indication of how much media has actually downloaded — this what the browser's native players seem to display.</p>
@@ -200,10 +198,10 @@ myAudio.buffered.end(1);   // returns 19</pre>
 
 <p>This should give you results similar to the following, where the light grey bar represents the buffered progress and green bar shows the played progress:</p>
 
-<p><img alt="A simple audio player with play button, seek bar and volume control, with a bar below it. The bar has a red portion to show played video, and a dark gray bar to show how much has been buffered." src="bufferedprogress.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="A simple audio player with play button, seek bar and volume control, with a bar below it. The bar has a red portion to show played video, and a dark gray bar to show how much has been buffered." src="bufferedprogress.png"></p>
 
 <div class="note">
-<p><strong>Note</strong>: You can see the <a href="https://jsbin.com/badimipi/1/edit">buffering code running live on JS Bin</a>.</p>
+<p><strong>Note:</strong> You can see the <a href="https://jsbin.com/badimipi/1/edit">buffering code running live on JS Bin</a>.</p>
 </div>
 
 <h2 id="A_quick_word_about_Played">A quick word about Played</h2>
