--- a/files/en-us/web/guide/audio_and_video_delivery/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/index.html
@@ -9,9 +9,7 @@ tags:
   - Media
   - Video
 ---
-<div class="summary">
 <p>We can deliver audio and video on the web in a number of ways, ranging from 'static' media files to adaptive live streams. This article is intended as a starting point for exploring the various delivery mechanisms of web based media and compatibility with popular browsers.</p>
-</div>
 
 <h2 id="The_Audio_and_Video_Elements">The Audio and Video Elements</h2>
 
@@ -41,8 +39,7 @@ tags:
 <p>The code above will create an audio player that attempts to preload as much audio as possible for smooth playback.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The <code>preload</code> attribute may be ignored by some mobile browsers.</p>
+  <p><strong>Note:</strong> The <code>preload</code> attribute may be ignored by some mobile browsers.</p>
 </div>
 
 <p>For further info see <a href="/en-US/docs/Web/Guide/Audio_and_video_delivery/Cross-browser_audio_basics#html5_audio_in_detail">Cross Browser Audio Basics (HTML5 Audio In Detail)</a></p>
@@ -66,8 +63,7 @@ tags:
 <p>The code above creates a video player of dimensions 640x480 pixels, displaying a poster image until the video is played. We instruct the video to autoplay but to be muted by default.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The <code>autoplay</code> attribute may be ignored by some mobile browsers. Also, the autoplay feature can be controversial when misused. It's strongly recommended that you read the <a href="/en-US/docs/Web/Media/Autoplay_guide">Autoplay guide for media and Web Audio APIs</a> to learn how to use autoplay wisely..</p>
+  <p><strong>Note:</strong> The <code>autoplay</code> attribute may be ignored by some mobile browsers. Also, the autoplay feature can be controversial when misused. It's strongly recommended that you read the <a href="/en-US/docs/Web/Media/Autoplay_guide">Autoplay guide for media and Web Audio APIs</a> to learn how to use autoplay wisely..</p>
 </div>
 
 <p>For further info see <a href="/en-US/docs/Web/HTML/Element/video">&lt;video&gt; element</a> and <a href="/en-US/docs/Web/Guide/Audio_and_video_delivery/cross_browser_video_player">Creating a cross-browser video player</a>.</p>
@@ -88,8 +84,7 @@ myAudio.play();</pre>
 <p>We set the source of the audio depending on the type of audio file the browser supports, then set the play-head 5 seconds in and attempt to play it.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Play will be ignored by most browsers unless issued by a user-initiated event.</p>
+  <p><strong>Note:</strong> Play will be ignored by most browsers unless issued by a user-initiated event.</p>
 </div>
 
 <p>It's also possible to feed an {{ htmlelement("audio") }} element a base64 encoded WAV file, allowing to generate audio on the fly:</p>
@@ -222,8 +217,7 @@ myVideo.height = 320;</pre>
 <p>The main formats used for adaptive streaming are <a href="/en-US/docs/Web/Guide/Audio_and_video_delivery/Live_streaming_web_audio_and_video#hls">HLS</a> and <a href="/en-US/docs/Web/Guide/Audio_and_video_delivery/Live_streaming_web_audio_and_video#mpeg-dash">MPEG-DASH</a>. MSE has been designed with DASH in mind. MSE defines byte streams according to <a href="https://dvcs.w3.org/hg/html-media/raw-file/tip/media-source/isobmff-byte-stream-format.html">ISOBMFF</a> and <a href="https://en.wikipedia.org/wiki/M2ts">M2TS</a> (both supported in DASH, the latter supported in HLS). Generally speaking, if you are interested in standards, are looking for flexibility, or wish to support most modern browsers, you are probably better off with DASH.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Currently Safari does not support DASH although dash.js will work on newer versions of Safari scheduled for release with OSX Yosemite.</p>
+  <p><strong>Note:</strong> Currently Safari does not support DASH although dash.js will work on newer versions of Safari scheduled for release with OSX Yosemite.</p>
 </div>
 
 <p>DASH also provides a number of profiles including simple onDemand profiles that no preprocessing and splitting up of media files. There are also a number of cloud based services that will convert your media to both HLS and DASH.<br>
@@ -329,8 +323,7 @@ mediaElement.played.end(0);      // Returns the number of seconds the browser ha
 </dl>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The playback range portion of the media element URI specification was added to Gecko 9.0 {{ geckoRelease("9.0") }}. At this time, this is the only part of the <a href="https://www.w3.org/TR/media-frags/">Media Fragments URI specification</a> implemented by Gecko, and it can only be used when specifying the source for media elements, and not in the address bar.</p>
+  <p><strong>Note:</strong> The playback range portion of the media element URI specification was added to Gecko 9.0 {{ geckoRelease("9.0") }}. At this time, this is the only part of the <a href="https://www.w3.org/TR/media-frags/">Media Fragments URI specification</a> implemented by Gecko, and it can only be used when specifying the source for media elements, and not in the address bar.</p>
 </div>
 
 <h2 id="Error_handling">Error handling</h2>
@@ -508,8 +501,7 @@ lastsource.addEventListener('error', function(ev) {
 </dl>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Firefox OS versions 1.3 and above support the <a href="https://en.wikipedia.org/wiki/Real_Time_Streaming_Protocol">RTSP</a> protocol for streaming video delivery. A fallback solution for older versions would be to use <code>&lt;video&gt;</code> along with a suitable format for Gecko (such as WebM) to serve fallback content. More information will be published on this in good time.</p>
+  <p><strong>Note:</strong> Firefox OS versions 1.3 and above support the <a href="https://en.wikipedia.org/wiki/Real_Time_Streaming_Protocol">RTSP</a> protocol for streaming video delivery. A fallback solution for older versions would be to use <code>&lt;video&gt;</code> along with a suitable format for Gecko (such as WebM) to serve fallback content. More information will be published on this in good time.</p>
 </div>
 
 <h2 id="References">References</h2>
