--- a/files/en-us/web/guide/graphics/index.html
+++ b/files/en-us/web/guide/graphics/index.html
@@ -12,9 +12,9 @@ tags:
   - WebGL
   - WebRTC
 ---
-<p><span class="seoSummary">Websites and applications often need to present graphics, such as images.</span> Static images can easily be displayed using the {{HTMLElement("img")}} element, or by setting the background of HTML elements using the {{cssxref("background-image")}} property. You can also construct graphics on-the-fly, or manipulate images after the fact. <span class="seoSummary">These articles provide insight into how you can accomplish this.</span></p>
+<p>Websites and applications often need to present graphics, such as images. Static images can easily be displayed using the {{HTMLElement("img")}} element, or by setting the background of HTML elements using the {{cssxref("background-image")}} property. You can also construct graphics on-the-fly, or manipulate images after the fact. These articles provide insight into how you can accomplish this.</p>
 
-<h2 class="Documentation" id="2D_Graphics">2D Graphics</h2>
+<h2 id="2D_Graphics">2D Graphics</h2>
 
 <dl>
  <dt><a href="/en-US/docs/Web/API/Canvas_API">Canvas</a></dt>
@@ -23,7 +23,7 @@ tags:
  <dd>Scalable Vector Graphics (SVG) lets you use lines, curves, and other geometric shapes to render graphics. With vectors, you can create images that scale cleanly to any size.</dd>
 </dl>
 
-<h2 class="Documentation" id="3D_Graphics">3D Graphics</h2>
+<h2 id="3D_Graphics">3D Graphics</h2>
 
 <dl>
  <dt><a href="/en-US/docs/Web/API/WebGL_API">WebGL</a></dt>
