--- a/files/en-us/web/guide/html/content_categories/index.html
+++ b/files/en-us/web/guide/html/content_categories/index.html
@@ -20,11 +20,10 @@ tags:
 </ul>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>A more detailed discussion of these content categories and their comparative functionalities is beyond the scope of this article; for that, you may wish to read the <a href="https://html.spec.whatwg.org/multipage/dom.html#kinds-of-content">relevant portions of the HTML specification</a>.</p>
+  <p><strong>Note:</strong> A more detailed discussion of these content categories and their comparative functionalities is beyond the scope of this article; for that, you may wish to read the <a href="https://html.spec.whatwg.org/multipage/dom.html#kinds-of-content">relevant portions of the HTML specification</a>.</p>
 </div>
 
-<p><a href="/en-US/docs/Web/Guide/HTML/Content_categories/content_categories_venn.png"><img alt="A Venn diagram showing how the various content categories interrelate. The following sections explain these relationships in text." class="default internal" src="content_categories_venn.png"></a></p>
+<p><a href="/en-US/docs/Web/Guide/HTML/Content_categories/content_categories_venn.png"><img alt="A Venn diagram showing how the various content categories interrelate. The following sections explain these relationships in text." src="content_categories_venn.png"></a></p>
 
 <h2 id="Main_content_categories">Main content categories</h2>
 
@@ -56,7 +55,7 @@ tags:
 <p>Elements belonging to this category are {{HTMLElement("article")}}, {{HTMLElement("aside")}}, {{HTMLElement("nav")}}, and {{HTMLElement("section")}}.</p>
 
 <div class="note">
-<p>Do not confuse this content model with the <a href="/en-US/docs/Web/HTML/Element/Heading_Elements#sectioning_roots" title="Sections and Outlines of an HTML5 document#sectioning root">sectioning root</a> category, which isolates its content from the regular outline.</p>
+<p><strong>Note:</strong> Do not confuse this content model with the <a href="/en-US/docs/Web/HTML/Element/Heading_Elements#sectioning_roots" title="Sections and Outlines of an HTML5 document#sectioning root">sectioning root</a> category, which isolates its content from the regular outline.</p>
 </div>
 
 <h3 id="Heading_content">Heading content</h3>
@@ -66,12 +65,11 @@ tags:
 <p>Elements belonging to this category are {{HTMLElement("h1")}}, {{HTMLElement("h2")}}, {{HTMLElement("h3")}}, {{HTMLElement("h4")}}, {{HTMLElement("h5")}}, {{HTMLElement("h6")}} and {{HTMLElement("hgroup")}}.</p>
 
 <div class="note">
-<p>Though likely to contain heading content, the {{HTMLElement("header")}} is not heading content itself.</p>
+<p><strong>Note:</strong> Though likely to contain heading content, the {{HTMLElement("header")}} is not heading content itself.</p>
 </div>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The {{HTMLElement("hgroup")}} element is not recommended as it does not work properly with assistive technologies. It was removed from the W3C HTML specification prior to HTML 5 being finalized, but is still part of the WHATWG specification and is at least partially supported by most browsers.</p>
+  <p><strong>Note:</strong> The {{HTMLElement("hgroup")}} element is not recommended as it does not work properly with assistive technologies. It was removed from the W3C HTML specification prior to HTML 5 being finalized, but is still part of the WHATWG specification and is at least partially supported by most browsers.</p>
 </div>
 
 <h3 id="Phrasing_content">Phrasing content</h3>
