--- a/files/en-us/web/guide/html/editable_content/index.html
+++ b/files/en-us/web/guide/html/editable_content/index.html
@@ -16,14 +16,13 @@ tags:
   - text input
 ---
 <div class="notecard warning">
-  <h2>Warning</h2>
-  <p>As the <a href="https://w3c.github.io/editing/docs/execCommand/"><code>execCommand()</code> spec</a> warns, its features <q>are not implemented consistently or fully by user agents</q>, and in addition, it is marked as deprecated on the <a href="/en-US/docs/Web/API/Document/execCommand"><code>Document.execCommand()</code></a> reference page. Therefore, much of the content on this page cannot be trusted for use in production code.</p>
+  <p><strong>Warning:</strong> As the <a href="https://w3c.github.io/editing/docs/execCommand/"><code>execCommand()</code> spec</a> warns, its features <q>are not implemented consistently or fully by user agents</q>, and in addition, it is marked as deprecated on the <a href="/en-US/docs/Web/API/Document/execCommand"><code>Document.execCommand()</code></a> reference page. Therefore, much of the content on this page cannot be trusted for use in production code.</p>
 </div>
 
-<p><span class="seoSummary">In HTML, any element can be editable. By using some JavaScript event handlers, you can transform your web page into a full and fast rich text editor. This article provides some information about this functionality.</span></p>
+<p>In HTML, any element can be editable. By using some JavaScript event handlers, you can transform your web page into a full and fast rich text editor. This article provides some information about this functionality.</p>
 
 <div class="note">
-<p><strong>Note</strong>: In Firefox 63 Beta/Dev edition, some of the rich-text editing features have been disabled by default, for better cross-browser compatibility. These are object resizing on {{htmlelement("img")}}, {{htmlelement("table")}}, and absolutely-positioned elements; inline table editing to add or remove rows and columns; and the grabber that allows moving of absolutely-positioned elements. See {{bug("1449564")}} for additional details.</p>
+<p><strong>Note:</strong> In Firefox 63 Beta/Dev edition, some of the rich-text editing features have been disabled by default, for better cross-browser compatibility. These are object resizing on {{htmlelement("img")}}, {{htmlelement("table")}}, and absolutely-positioned elements; inline table editing to add or remove rows and columns; and the grabber that allows moving of absolutely-positioned elements. See {{bug("1449564")}} for additional details.</p>
 </div>
 
 <h2 id="How_does_it_work">How does it work?</h2>
@@ -53,7 +52,7 @@ tags:
 <p>Try it out in the above example.</p>
 
 <div class="note">
-<p><strong>Note</strong>: Internet Explorer, which is no longer being developed, uses {{htmlelement("p")}} elements instead of <code>&lt;div&gt;</code>.</p>
+<p><strong>Note:</strong> Internet Explorer, which is no longer being developed, uses {{htmlelement("p")}} elements instead of <code>&lt;div&gt;</code>.</p>
 </div>
 
 <p>If you want to use a different paragraph separator, the above browsers all support {{domxref("document.execCommand")}}, which provides a <code>defaultParagraphSeparator</code> command to allow you to change it. For example, to use {{htmlelement("p")}} elements:</p>
@@ -68,14 +67,14 @@ tags:
 
 <p>For security reasons, Firefox doesn't let JavaScript code use clipboard related features (copy, paste, etc.) by default. You can enable them by setting the preferences shown below using <code>about:config</code>:</p>
 
-<pre class="code">user_pref("capability.policy.policynames", "allowclipboard");
+<pre>user_pref("capability.policy.policynames", "allowclipboard");
 user_pref("capability.policy.allowclipboard.sites", "https://www.mozilla.org");
 user_pref("capability.policy.allowclipboard.Clipboard.cutcopy", "allAccess");
 user_pref("capability.policy.allowclipboard.Clipboard.paste", "allAccess");</pre>
 
 <h2 id="Example_A_simple_but_complete_rich_text_editor">Example: A simple but complete rich text editor</h2>
 
-<pre class="brush: html" style="height: 500px; width: auto; overflow: auto;">&lt;!doctype html&gt;
+<pre class="brush: html">&lt;!doctype html&gt;
 &lt;html&gt;
 &lt;head&gt;
 &lt;title&gt;Rich Text Editor&lt;/title&gt;
