--- a/files/en-us/web/guide/user_input_methods/index.html
+++ b/files/en-us/web/guide/user_input_methods/index.html
@@ -12,15 +12,13 @@ tags:
   - touch
   - user input
 ---
-<div class="summary">
-<p><span class="seoSummary">Modern web user input goes beyond simple mouse and keyboard: think of touchscreens for example. This article provides recommendations for managing user input and implementing controls in open web apps, along with FAQs, real-world examples, and links to further information for anyone needing more detailed information on the underlying technologies. Relevant APIs and events include <a href="/en-US/docs/Web/API/Touch_events">touch events</a>, <a href="/en-US/docs/Web/API/Pointer_Lock_API">Pointer Lock API</a>, <a href="/en-US/docs/Web/API/CSS_Object_Model/Managing_screen_orientation">Screen Orientation API</a>, <a href="/en-US/docs/Web/API/Fullscreen_API">Fullscreen API</a>, <a href="/en-US/docs/Web/API/HTML_Drag_and_Drop_API">Drag &amp; Drop</a> and more.</span></p>
-</div>
+<p>Modern web user input goes beyond simple mouse and keyboard: think of touchscreens for example. This article provides recommendations for managing user input and implementing controls in open web apps, along with FAQs, real-world examples, and links to further information for anyone needing more detailed information on the underlying technologies. Relevant APIs and events include <a href="/en-US/docs/Web/API/Touch_events">touch events</a>, <a href="/en-US/docs/Web/API/Pointer_Lock_API">Pointer Lock API</a>, <a href="/en-US/docs/Web/API/CSS_Object_Model/Managing_screen_orientation">Screen Orientation API</a>, <a href="/en-US/docs/Web/API/Fullscreen_API">Fullscreen API</a>, <a href="/en-US/docs/Web/API/HTML_Drag_and_Drop_API">Drag &amp; Drop</a> and more.</p>
 
 <h2 id="User_input_and_controls_workflow">User input and controls workflow</h2>
 
 <p>The following diagram illustrates the typical workflow for implementing user input mechanisms:</p>
 
-<p style="text-align: center;"><img alt="" src="user-input-and-controls.png"></p>
+<p><img alt="" src="user-input-and-controls.png"></p>
 
 <p>First of all, you need to decide which input mechanisms you want to cover in your application out of mouse, keyboard, finger touch and so on. Once you decided the input mechanisms, you can control them using tools offered by the web platform or JavaScript libraries.</p>
 
@@ -49,7 +47,7 @@ window.addEventListener("keyup", handleKeyUp, true);</pre>
 <p>where <code>handleKeyDown</code> and <code>handleKeyUp</code> are the functions implementing the controls about the <code>keydown</code> and <code>keyup</code> events.</p>
 
 <div class="note">
-<p><strong>Note</strong>: Have a look at the <a href="/en-US/docs/Web/Events">Events reference</a> and {{domxref("KeyboardEvent")}} guide to find out more about keyboard events.</p>
+<p><strong>Note:</strong> Have a look at the <a href="/en-US/docs/Web/Events">Events reference</a> and {{domxref("KeyboardEvent")}} guide to find out more about keyboard events.</p>
 </div>
 
 <h4 id="Mouse">Mouse</h4>
@@ -71,7 +69,7 @@ element.addEventListener("touchmove", handleMove, false);</pre>
 <p>where <code>element</code> is the DOM element you want to register the touch events on.</p>
 
 <div class="note">
-<p><strong>Note</strong>: For further information about what you can do with touch events, please read our <a href="/en-US/docs/Web/API/Touch_events">touch events guide</a>.</p>
+<p><strong>Note:</strong> For further information about what you can do with touch events, please read our <a href="/en-US/docs/Web/API/Touch_events">touch events guide</a>.</p>
 </div>
 
 <h4 id="Pointer_Events">Pointer Events</h4>
@@ -79,7 +77,7 @@ element.addEventListener("touchmove", handleMove, false);</pre>
 <p>When dealing with devices that incorporate multiple forms of input, like mouse, finger touch and pen input, it might be hard to develop a solution that works for all these different control mechanisms. <a href="https://www.w3.org/TR/pointerevents/">Pointer Events</a> help developers more easily manage events across devices by normalizing the handling of each one. A pointer can be any point of contact on the screen made by a mouse cursor, pen, touch (including multi-touch), or other pointing input device. The events for handling generic pointer input look a lot like those for mouse: <code>pointerdown</code>, <code>pointermove</code>, <code>pointerup</code>, <code>pointerover</code>, <code>pointerout</code>, etc.</p>
 
 <div class="note">
-<p><strong>Note</strong>: Pointer Events are not widely supported yet, but a <a href="https://github.com/mozilla/pointer.js">pointer.js polyfill</a> is available on Mozilla Github.</p>
+<p><strong>Note:</strong> Pointer Events are not widely supported yet, but a <a href="https://github.com/mozilla/pointer.js">pointer.js polyfill</a> is available on Mozilla Github.</p>
 </div>
 
 <h3 id="Implement_controls">Implement controls</h3>
@@ -93,7 +91,7 @@ element.addEventListener("touchmove", handleMove, false);</pre>
 <pre class="brush: js">element.requestPointerLock();</pre>
 
 <div class="note">
-<p><strong>Note</strong>: For a full tutorial and reference, read our {{domxref("Pointer_Lock_API")}} page.</p>
+<p><strong>Note:</strong> For a full tutorial and reference, read our {{domxref("Pointer_Lock_API")}} page.</p>
 </div>
 
 <h4 id="Screen_Orientation">Screen Orientation</h4>
@@ -103,7 +101,7 @@ element.addEventListener("touchmove", handleMove, false);</pre>
 <p>Orientation data can be retrieved through the {{domxref("screen.orientation")}} attribute or through the <a href="/en-US/docs/Web/CSS/Media_Queries/Using_media_queries#orientation"><code>orientation</code></a> media feature. When <code>screen.orientation</code> changes, the {{domxref("screen.orientationchange")}} event is fired on the screen object. Locking the screen orientation is made possible by invoking the {{domxref("screen.lockOrientation")}} method, while the {{domxref("screen.unlockOrientation")}} method removes all the previous screen locks that have been set.</p>
 
 <div class="note">
-<p><strong>Note</strong>: More information about the Screen Orientation API can be found in <a href="/en-US/docs/Web/API/CSS_Object_Model/Managing_screen_orientation">Managing screen orientation</a>.</p>
+<p><strong>Note:</strong> More information about the Screen Orientation API can be found in <a href="/en-US/docs/Web/API/CSS_Object_Model/Managing_screen_orientation">Managing screen orientation</a>.</p>
 </div>
 
 <h4 id="Fullscreen">Fullscreen</h4>
@@ -122,7 +120,7 @@ if (elem.requestFullscreen) {
 }</pre>
 
 <div class="note">
-<p><strong>Note</strong>: To find more out about adding fullscreen functionality your application, read our documentation about <a href="/en-US/docs/Web/API/Fullscreen_API">using fullscreen mode</a>.</p>
+<p><strong>Note:</strong> To find more out about adding fullscreen functionality your application, read our documentation about <a href="/en-US/docs/Web/API/Fullscreen_API">using fullscreen mode</a>.</p>
 </div>
 
 <h4 id="Drag_Drop">Drag &amp; Drop</h4>
@@ -143,7 +141,7 @@ if (elem.requestFullscreen) {
 </ul>
 
 <div class="note">
-<p><strong>Note</strong>: You can find more information in the <a href="/en-US/docs/Web/API/HTML_Drag_and_Drop_API">MDN Drag &amp; Drop documentation</a>.</p>
+<p><strong>Note:</strong> You can find more information in the <a href="/en-US/docs/Web/API/HTML_Drag_and_Drop_API">MDN Drag &amp; Drop documentation</a>.</p>
 </div>
 
 <h4 id="contentEditable">contentEditable</h4>
@@ -155,7 +153,7 @@ if (elem.requestFullscreen) {
 &lt;/div&gt;</pre>
 
 <div class="note">
-<p><strong>Note</strong>: Compatibility information, examples and other resources can be found in the <a href="/en-US/docs/Web/Guide/HTML/Editable_content">Content Editable guide</a>.</p>
+<p><strong>Note:</strong> Compatibility information, examples and other resources can be found in the <a href="/en-US/docs/Web/Guide/HTML/Editable_content">Content Editable guide</a>.</p>
 </div>
 
 <h2 id="Examples">Examples</h2>
